11_minikube/deployments/newhope/sample-orders/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-orders
spec:
  selector:
    app: sample-orders
  ports:
  - protocol: TCP
    port: 80
    targetPort: api
