11_minikube/deployments/newhope/sample-orders/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-orders
spec:
  rules:
    - host: sample-orders-api.minikube
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sample-orders
                port:
                  name: api
